--- a/dashboard/css/modules/piston.module.css
+++ b/dashboard/css/modules/piston.module.css
@@ -1505,3 +1505,7 @@ div[input]:focus {
 	border-left: 3px solid #15bfff;
 	cursor: pointer;
 }
+
+span[data-target="#collapseScript"][data-toggle="collapse"] {
+	margin-top: 25px;
+}
